Fix: Remove API key from config files